# Hash-CAD

./: .gitignore  .last_build_id  .readthedocs.yml  202407523_learningcodebase.ipynb  AGENTS.md  CMakeLists.txt  CNAME  LICENSE  README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  manifest.json  pyproject.toml  requirements.txt  setup.py  version.json
.github/: dependabot.yml
GUI/: README.md  app.py  cargoArray.npy  crisscross_server.py  generic_cargo_importer.py  package-lock.json  package.json  server_helper_functions.py  slatArray.npy
Handle_Library_Generator/: .gitignore
Handle_Library_Project/: .gitignore
assembly_handle_plates/: P3252_SW_antihandles.xlsx  P3536_MA_h2_antihandles.xlsx  P3601_MA_H5_handles_S1A.xlsx  P3603_MA_H5_handles_S1C.xlsx  P3604_MA_H2_antihandles_S1A.xlsx  P3606_MA_H2_antihandles_S1C.xlsx  P3649_MA_H5_handles_S1A.xlsx  P3651_MA_H5_handles_S1C.xlsx  P3653_MA_H5_handles_S2B.xlsx  P3654_MA_H5_handles_S2C.xlsx  P3656_MA_H2_antihandles_S1B.xlsx
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
cargo_plates/: P3510_SSW_cnt_patterning.xlsx  P3518_MA_octahedron_patterning_v1.xlsx  PXYZ_edna_bart_h5.xlsx  sw_src004_polyAgridiron.xlsx  sw_src004_polyAgridiron_realwithseedhandles.xlsx  sw_src005_antiNelsonQuimby_cc6hb_h2handles.xlsx  sw_src007_nelson_quimby_bart_edna.xlsx  sw_src008_lef1-scramble-7hb.xlsx
cli_functions/: handle_evolution.py
core_plates/: P2854_CW_seed_plug_center.xlsx  P3248_SW_xslat_handles.xlsx  P3250_SW_yslat_handles.xlsx  (+11 more)
(+1209 files in other folders)
